# oot-backend

./: Cargo.toml  Dockerfile  README.md  client.py  docker-compose.yml  todo.txt
src/: main.rs
src/api/: mod.rs
src/state/: mod.rs
src/ws/: error.rs  mod.rs
src/ws/game/: mod.rs  state.rs
src/ws/game/message/: answer.rs  ask_question.rs  choose_answerer.rs  mod.rs  start.rs  validate_answer.rs
src/ws/server/: connection.rs  mod.rs  room.rs
src/ws/server/command/: chat_message.rs  client_message.rs  connect.rs  disconnect.rs  join.rs  mod.rs
src/ws/server/command/game/: answer.rs  answer_timeout.rs  ask_question.rs  choose_answerer.rs  create_game.rs  mod.rs  validate_answer.rs
src/ws/server/game/: host.rs  mod.rs  player.rs  state.rs
src/ws/server/game/event/: answer.rs  answer_timeout.rs  ask_question.rs  choose_answerer.rs  mod.rs  start.rs  validate_answer.rs
src/ws/server/message/: chat_message.rs  connect.rs  disconnect.rs  join.rs  mod.rs  server_message.rs
src/ws/server/message/game_message/: answer.rs  answer_timeout.rs  ask_question.rs  choose_answerer.rs  create_game.rs  mod.rs  player_lost.rs  validate_answer.rs
src/ws/session/: message.rs  mod.rs
