[package]
name = "oot-backend"
version = "0.1.0"
authors = ["kpusmo <smolarkiewicz@nonstop.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
listenfd = "0.3"
serde_json = "1.0"
serde = "1.0"
actix-cors = "0.2.0"
actix-rt = "1.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
rand = "0.7.3"