[package]
name = "oot-backend"
version = "0.1.0"
authors = ["kpusmo <smolarkiewicz@nonstop.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
listenfd = "0.3"
serde_json = "1.0"
serde = "1.0"
actix-cors = "0.2.0"
actix-rt = "^1.1"
actix-web-actors = "3"
actix = "^0.10"
rand = "0.7.3"